<?xml version="1.0" encoding="utf-8"?>
<!--  This file is part of GraphCreator.

    GraphCreator is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    GraphCreator is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with GraphCreator.  If not, see <http://www.gnu.org/licenses/>.
    
    Copyright (C) 2012-2014 Jonathan L. Meek
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	<TextView
	    
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/graphType"
    	android:textAppearance="?android:attr/textAppearanceMedium"    /> 

	<RadioGroup
	    android:id="@+id/graphType"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">

	    <RadioButton android:id="@+id/radio_bar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/barGraph"
          android:tag ="bar"          />
	    
      <RadioButton android:id="@+id/radio_line"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lineGraph"
          android:tag="line"          />
      
	</RadioGroup>
	    	    
	<TextView
    	android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content"
   	 	android:text="@string/xDataSet"
   	 	android:textAppearance="?android:attr/textAppearanceMedium"    />
	    
	<Spinner
    	android:id="@+id/xheaderChoice"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"    />
	
	<TextView
    	android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content"
   	 	android:text="@string/yDataSet"
   	 	android:textAppearance="?android:attr/textAppearanceMedium"    />
	    
	<Spinner
    	android:id="@+id/yheaderChoice"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"    />
	
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/selectTableSQL"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<TextView
	    android:id="@+id/sqlStringDisplay"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" />
	
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/generateSQL"
		android:onClick="sqlStringDisplay" />	
	
	<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/querySQL"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<TextView
	    android:id="@+id/dbQueryStatus"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/querySQLstatus" />
	
	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/dbQuery"
	    android:onClick="dbQuery"	    />

	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/generateHTML"
	    android:onClick="generateFile"	    />
	<Button
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/loadHTML"
	    android:onClick="loadScreen"	    />
</LinearLayout>
</ScrollView>
